# polymarket-copy-trading-bot

./: Cargo.toml  README.md  run.bat  run.sh
docs/: 01_QUICK_START.md  02_SETUP_GUIDE.md  03_CONFIGURATION.md  05_STRATEGY.md  06_TROUBLESHOOTING.md  07_COMMAND_REFERENCE.md  WSL_QUICK_REFERENCE.md  WSL_SETUP_GUIDE.md
src/: lib.rs  main.rs  market_cache.rs  models.rs  orders.rs  risk_guard.rs  settings.rs  strategy.rs
