[package]
name = "pm_whale_follower"
default-run = "polymarket-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
alloy = { version = "1.1.3", features = ["signer-local", "dyn-abi", "eip712"] }
hmac = "0.12"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", default-features = false, features = ["derive", "std"] }
serde_json = "1"
csv = "1.3"
sha2 = "0.10"
dotenvy = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
clap = { version = "4.5", features = ["derive"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures = "0.3"
polymarket-client-sdk = { version = "0.4", features = ["clob"] }
rust_decimal_macros = "1.34"
rand = "0.8"
rustc-hash = "1.1"
ryu = "1.0"
itoa = "1.0"
memchr = "2"
once_cell = "1"

[dev-dependencies]
criterion = "0.5"
smallstr = "0.3"

[profile.dev]
opt-level = 0              # No optimization (fast compile)
debug = 0                  # No debug symbols (saves memory/time)
codegen-units = 256        # Max parallelism per crate
incremental = true         # Reuse previous work

[profile.dev.package."*"]
opt-level = 2              # But optimize dependencies

[profile.release]
lto = 'thin'          # Link-time optimization
codegen-units = 2   # Better optimization, slower compile
debug = true

[[bin]]
name = "polymarket-bot"
path = "src/bin/polymarket_bot.rs"

[[bin]]
name = "pm_bot"
path = "src/main.rs"

[[bin]]
name = "test_order_types"
path = "src/bin/test_order_types.rs"

[[bin]]
name = "validate_setup"
path = "src/bin/validate_setup.rs"

[[bin]]
name = "mempool_monitor"
path = "src/bin/mempool_monitor.rs"

[[bin]]
name = "trade_monitor"
path = "src/bin/trade_monitor.rs"

[[bin]]
name = "approve_tokens"
path = "src/bin/approve_tokens.rs"

[[bin]]
name = "check_balance"
path = "src/bin/check_balance.rs"

[[bin]]
name = "check_market"
path = "src/bin/check_market.rs"

[[bin]]
name = "refresh_cache"
path = "src/bin/refresh_cache.rs"

[[bin]]
name = "test_connection"
path = "src/bin/test_connection.rs"

[features]
profiling = []